namespace TeletubbiesConsoleApp.Classes
{
    public class BigTelephoneData
    {
        enum state{WatchTV, WakeUp, EatDinner, SayByeBye }
        public BigTelephoneData()
        {          
        }

        public int State {get; set;}


    }
}